<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="network_connection_error">خطا در اتصال به شبکه، لطفا دسترسی به اینترنت را بررسی کنید</string>
    <string name="retry">سعی مجدد</string>
    <string name="cancel">انصراف</string>
    <string name="loading">در حال بارگزاری</string>
    <string name="load_failed">خطا در بارگزاری</string>
    <string name="empty_list_text">هیچ موردی یافت نشد</string>
    <string name="app_crash_message">اجرای برنامه با خطا مواجه شده\nلطفا به صفحه اصلی برنامه بازگردید</string>
    <string name="back_to_main_page">بازگشت به صفحه اصلی</string>
    <string name="list_default_error_message">ظاهرا خطایی رخ داده\nبرای تلاش مجدد کلید زیر را لمس کنید</string>
    <string name="loremipsum">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>
</resources>