<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fadingEdge="none"
        android:fadingEdgeLength="0dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="@dimen/error_image_size"
                android:layout_height="@dimen/error_image_size"
                android:contentDescription="@null"
                app:srcCompat="@drawable/image_error" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/margin_10"
                android:padding="@dimen/margin_15"
                android:text="@string/app_crash_message"
                android:textColor="@color/colorGrayDarker"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/restartButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height_40"
                android:layout_marginTop="@dimen/margin_40"
                android:background="@drawable/btn_radius_red"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingHorizontal="@dimen/margin_20"
                android:text="@string/back_to_main_page"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_13" />

            <TextView
                android:id="@+id/errorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginTop="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_15"
                android:layout_marginBottom="@dimen/margin_15"
                android:background="@drawable/bg_container"
                android:padding="@dimen/margin_15"
                android:textColor="@color/colorRedDark"
                android:textSize="@dimen/text_size_13"
                tools:text="@string/loremipsum" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>