<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/margin_30"
    android:layout_marginRight="@dimen/margin_30"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="7dp"
    app:cardElevation="@dimen/margin_5"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_image_height"
            android:layout_marginTop="@dimen/margin_10"
            android:src="@drawable/no_internet"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="10dp"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_20"
            android:paddingRight="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_20"
            android:text="@string/network_connection_error"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintBottom_toTopOf="@id/retry"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <TextView
            android:id="@+id/retry"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height_35"
            android:layout_marginBottom="@dimen/margin_20"
            android:background="@drawable/btn_radius_primary"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minWidth="@dimen/button_width_100"
            android:text="@string/retry"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cancel" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height_35"
            android:layout_marginBottom="@dimen/margin_20"
            android:background="@drawable/btn_radius_stroke_primary"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minWidth="@dimen/button_width_100"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/retry"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>